fix: input in Settings, z-index in dialog popup

--- a/src/components/DialogPopup/DialogPopup.scss
+++ b/src/components/DialogPopup/DialogPopup.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   transition: visibility 1s linear, opacity 1s linear;
-  z-index: 5;
+  z-index: 12;
     visibility: hidden;
   &__container {
     display: flex;
