--- a/src/components/InputBottom/InputBottom.scss
+++ b/src/components/InputBottom/InputBottom.scss
@@ -39,7 +39,7 @@
     position: absolute;
     right: 60px;
     top: 14px;
-    z-index: 99;
+    z-index: 9;
     background-color: transparent;
     border: 0px;
     padding: 0;
