--- a/src/pages/Settings.scss
+++ b/src/pages/Settings.scss
@@ -233,7 +233,7 @@
     &__content_dinamic_controler {
       .controler__value {
         margin-left: 2px;
-        width: 51px;
+        width: 58px;
         height: 24px;
       }
       .controler {
